Changes from jTDS 0.8.1
=========================

07/27/2004 - Brian Heineman
 o Corrected bug [998765] Exception with Sybase and metaData.getTables(); Added
   test to ensure this functionality continues to work in the future.

07/26/2004 - David Kilzer
 o Made SharedNamedPipe constructor package-private to match SharedSocket
   constructor.
 o Made TdsCore.SQLSERVER and TdsCore.SYBASE public.  Removed use of
   "magic" values.
 o Fixed default value of lobBuffer in AbstractDataSource.getReference().
   It was using "portNumber" instead of "lobBuffer" for its default.
 o Made TdsCore.TDS42, TDS50, TDS70, TDS80 constants public for use with
   testing.
 o Made TdsCore.MIN_PKT_SIZE public, and created TdsCore.MAX_PKT_SIZE and
   TdsCore.DEFAULT_MIN_PKT_SIZE_TDS70.  Removed used of "magic" values.
 o Wrote new SharedNamedPipeTest class for testing new
   SharedNamedPipe.calculateBufferSize() method.
 o Fixed bug in SharedNamedPipe that caused it to create a zero-length
   BufferedInputStream internally when packetSize == 0 (which is common
   for TDS 7.0 and TDS 8.0 to allow the server to set the packet size).

07/26/2004 - Brian Heineman
 o Removed extraneous methods from SharedSocket and SharedNamedPipe.

07/25/2004 - David Kilzer
 o Fixed bug when using instances with named pipes.  ConnectJDBC2 constructor
   was trying to determine the correct serverPort by creating a MSSqlServerInfo
   object, which is not necessary for named pipes.
 o Fixed bad message key in ConnectJDBC2.unpackProperties().  Changed
   "prop.portservertype" to "prop.servertype".

07/25/2004 - Brian Heineman
 o Applied patch [991684] Implement named pipe IPC for SQL Server 6.5; (Thanks
   to David Kilzer <ddkilzer@users.sourceforge.net> for the patch)

07/23/2004 - Brian Heineman
 o Improved ConnectionPoolDataSource exception processing and closed connection
   handling.
 o Applied patch [989791] Workaround for null values in properties; (Thanks to
   Art Gramlich for the original patch)