@@ -1,6 +1,17 @@
 Changes from jTDS 0.8.1
 =========================
 
+07/27/2004 - David Kilzer
+ o Renamed SharedNamedPipeTest to NamedPipeUnitTest to better reflect its
+   usage.
+ o Added protected getters and setters to SharedSocket so that the in, out,
+   tdsVersion and serverType fields could be made private again.  Implemented
+   use of getters and setters in SharedSocket and SharedNamedPipe.
+ o Refactored SharedNamedPipe constructor into an instance() static factory
+   method.  Allowed calculateBufferSize() method to be made non-static,
+   and will allow for easier unit testing in the future.
+ o Cleaned up javadoc: fixed spelling and removed unused @throws.
+
 07/27/2004 - Brian Heineman
  o Corrected bug [998765] Exception with Sybase and metaData.getTables(); Added
    test to ensure this functionality continues to work in the future.
